# simple-scheduler

./: .env  Cargo.toml  Dockerfile  README.md
backend/: Cargo.toml  Rocket.toml  hypervisor_client.rs
backend/.cargo/: config.toml
backend/migrations/: 20210402155322_creation.sql
backend/src/: config.rs  main.rs  models.rs
backend/src/auth/: auth_token.rs  authentification.rs  credentials.rs  key_pair.rs  mod.rs
backend/src/commands/: create_credential_token.rs  create_user.rs  mod.rs  run_server.rs
backend/src/messaging/: mod.rs  sendable.rs  to_client.rs  to_executor.rs  to_scheduler.rs
backend/src/models/: batches.rs  common.rs  jobs.rs  mod.rs  status.rs  tasks.rs  users.rs
backend/src/rest/: jobs.rs  mod.rs  tasks.rs
backend/src/scheduling/: cache_actor.rs  client.rs  db_writer_actor.rs  executor_actor.rs  mod.rs  queue_actor.rs  server.rs  status_aggregator_actor.rs  status_store.rs
backend/src/tasks/: executor.rs  handle.rs  ipc.rs  mod.rs  monitor.rs
backend/src/workflows/: graph.rs  mod.rs  parser.rs
backend/test-data/: workflow.xml  workflow_with_duplicated_task_names.xml
backend/test-data/authentification/: credential-java-debug.enc  private.rsa.pkcs8.der  public.rsa.pkcs8.der
doc/: executor.md  makefile
doc/spawing-process/: step-1.dot  step-10.dot  step-11.dot  step-2.dot  step-3.dot  step-4.dot  step-5.dot  step-6.dot  step-7.dot  step-8-bis.dot  step-8-ter.dot  step-8.dot  step-9.dot
migrations/: 20210402155322_creation.sql
migrations/2021-02-24-180404_create_all/: down.sql
src/: executor.rs  listener.rs  main.rs  models.rs  pipe.rs  process_utils.rs  schema.rs
src/auth/: auth_token.rs  authentification.rs  mod.rs
src/messages/: mod.rs  to_executor.rs
src/messaging/: mod.rs  sendable.rs  to_executor.rs  to_scheduler.rs
src/rest/: jobs.rs  mod.rs
src/scheduling/: client.rs  mod.rs  scheduler.rs  server.rs
src/tasks/: executor.rs  handle.rs  ipc.rs  mod.rs  monitor.rs  monitor_handle.rs  pipe.rs  query.rs  task_status.rs  utils.rs
src/workflows/: graph.rs  mod.rs  parser.rs
test-data/: workflow_with_cycle.xml
utils/: echo-workflow.xml  gen_key_pair.sh  submit-and-fetch-task-output.py  submit-then-kill.py  submit.sh
