[package]
name = "rust-scheduler"
version = "0.1.0"
authors = ["Yves MOISAN <yves@moisan.tf"]
edition = "2018"


[dependencies]
# main server framework
rocket = {git = "https://github.com/SergioBenitez/Rocket", branch = "master"}
# async sql queries
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "chrono", "sqlite", "migrate", "macros" ] }
async-trait = "0.1.48"

dotenv = "0.15.0"
nix = "0.20"
chrono = { version = "0.4", features = ["serde"] }

[global.databases]
task_db = { url = "./database.sqlite" }

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
#default-features = false
#features = ["diesel_sqlite_pool"]

