[package]
name = "rust-scheduler"
version = "0.1.0"
authors = ["Yves MOISAN <yves@moisan.tf"]
edition = "2018"


[dependencies]
# main server framework
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
# async sql queries
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "chrono", "sqlite", "migrate", "macros", "offline"] }
async-trait = "0.1.48"

dotenv = "*"
nix = "*"
chrono = { version = "*", features = ["serde"] }
serde = "*"
serde_json = "*"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
#default-features = false
#features = ["diesel_sqlite_pool"]

