[package]
name = "rust-scheduler"
version = "0.1.0"
authors = ["Yves MOISAN <yves@moisan.tf"]
edition = "2018"


[dependencies]
# main server framework
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = [ "json" ] }
# async sql queries
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "chrono", "sqlite", "migrate", "macros", "offline"] }

dotenv = "*"
nix = "*"
chrono = { version = "*", features = ["serde"] }
serde = "*" # serialization
serde_json = "*" # serialization to json
bincode = "*" # serialization to bytes
quick-xml = { version = "*", features = [ "serialize" ] }  # XML reader, with serde support
async-trait = "*"
tempfile = "*"
