[package]
name = "simple-scheduler"
version = "0.1.0"
authors = ["Yves MOISAN <yves@moisan.tf"]
edition = "2018"


[dependencies]
# main server framework
rocket = { version = "0.5.0-rc.1",  features = ["secrets", "json" ] }
# async sql queries
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "chrono", "sqlite", "migrate", "macros", "offline"] }

dotenv = "*"
nix = "*"
chrono = { version = "*", features = ["serde"] }
serde = "*" # serialization
serde_json = "*" # serialization to json
bincode = "*" # serialization to bytes
quick-xml = { version = "*", features = [ "serialize" ] }  # XML reader, with serde support
async-trait = "*"
tempfile = "*"
zip = "*" # sync only so far
rsa = { version = "*", features = [ "alloc" ] } # RSA asymetric encryption
aes = "*" # AES symetric encryption
jaded = { version = "*", features = [ "derive" ] } # Java Object deserialization
base64 = "*"
scrypt = "0.10"
jsonwebtoken = "8"
clap = { version = "3", features =  ["derive"] }
