[package]
name = "simple-scheduler"
version = "0.2.1"
authors = ["Yves MOISAN <yves@moisan.tf"]
edition = "2021"


[dependencies]
# main server framework
rocket = { version = "0.5.0-rc.1",  features = ["secrets", "json" ] }
# async sql queries
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "chrono", "sqlite", "migrate", "macros", "offline"] }

nix = "*"
chrono = { version = "*", features = ["serde"] }
serde = "*" # serialization
serde_json = "*" # serialization to json
bincode = "*" # serialization to bytes
quick-xml = { version = "*", features = [ "serialize" ] }  # XML reader, with serde support
async-trait = "*"
tempfile = "*"
zip = "*" # sync only so far
rsa = { version = "*", features = [ "alloc" ] } # RSA asymetric encryption
aes = "0.8" # AES symetric encryption
#cipher = "0.4"
jaded = { version = "*", features = [ "derive" ] } # Java Object deserialization
base64 = "0.21"
scrypt = "0.10"
clap = { version = "3", features =  ["derive"] }
rand = "*"

time =  ">=0.3.35"
